# distributed-scraping-orchestrator

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: FAQ.md  はじめの一歩.md  実装例.py  本番運用に向けた課題.md  詳細解説_Framework.md  詳細解説_統括層.md  運用マニュアル.md  運用マニュアル_スクリプト自動同期.md  開発マニュアル.md
src/const/: config.py  schema.py
src/framework/: __init__.py  base.py  dynamic.py  pipeline.py  static.py
src/utils/: catalog_presenter.py  catalog_repo.py  git_sync.py  normalizer.py  notify.py  s3_uploader.py  scraper_loader.py  sites_config.py
tests/: test_continue_on_error.py  test_normalizer.py  test_pipeline.py  test_schema.py
